--- a/src/index.css
+++ b/src/index.css
@@ -248,3 +248,15 @@ body {
         border-radius: var(--radius-lg);
     }
 }
+
+/* ===== 숫자 입력 스피너 스타일 ===== */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
+    margin: 0;
+}
